List generation for testing updated